--- a/style/index.css
+++ b/style/index.css
@@ -33,6 +33,34 @@ a{
     margin: auto;
 }
 
+.container2{
+    max-width: 85vw;
+    margin: auto;
+}
+
+.gr{
+    color: #04f7ae;
+}
+
+.line{
+    background-color: #04f7ae;
+    width: 90px;
+    height: 2px;
+    position: relative;
+    margin-top: 5px;
+    left: 46%;
+    margin-bottom: 90px;
+}
+
+.light{
+    color: #4d4d4d;
+}
+
+.large{
+    font-size: 50px;
+    font-weight: bold;
+    color: #8d8d8d;
+}
 
 /*Header*/
 #header{
@@ -62,8 +90,6 @@ a{
     color: #fff;
     
 }
-
-
 
 #header #navbar .nav-content ul{
     display: flex;
@@ -171,6 +197,128 @@ a{
     margin-bottom: 20px;
 }
 
+/*About*/
+#about{
+    margin-top: 150px;
+    margin-bottom: 90px;
+}
+
+#about #title{
+    text-align: center;
+}
+
+#about .about-content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 30px;
+}
+
+#about .about-content .about-left{
+    width: 800px;
+}
+
+#about .about-content .about-left h1{
+    margin-bottom: 20px;
+}
+
+#about .about-content .about-right ul li{
+    border-bottom: 1px solid rgb(155, 155, 155);
+    margin-bottom: 20px;
+}
+
+#about .about-content .about-right ul li p{
+    display: inline;
+    margin-bottom: 10px;
+}
+
+#about #stats{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    width: 1100px;
+    margin: auto;
+}
+
+#about #stats .stat{
+    border-right: 1px dotted #4d4d4d;
+    margin-right: 50px;
+}
+
+
+@media only screen and (max-width: 1200px) {
+    #about .about-content .about-left {
+        width: 600px;
+    }
+} 
+
+@media only screen and (max-width: 1120px) {
+    #about .about-content .about-left {
+        width: 500px;
+    }
+}  
+
+@media only screen and (max-width: 1000px) {
+    #about .about-content .about-left {
+        width: 800px;
+    }
+
+    #about .about-content .about-left h1{
+        text-align: center;
+    }
+
+    #about .about-content .about-left p{
+        text-align: center;
+        margin-bottom: 40px;
+    }
+
+    #about .about-content{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .line{
+        left: 45%;
+    }
+
+    #about #stats{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        width: 1100px;
+        margin: auto;
+    }
+
+    #about #stats .stat{
+        margin-bottom: 40px;
+        width: 200px;
+    }
+
+} 
+
+@media only screen and (max-width: 860px) {
+    #about .about-content .about-left {
+        width: 700px;
+    }
+
+    .line{
+        left: 42%;
+    }
+
+    #about #stats{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-gap: 0rem;
+        width: 300px;
+        margin: auto
+    }
+
+    #about #stats .stat{
+        margin-bottom: 40px;
+        width: 100px;
+    }
+}
+
 @media only screen and (max-width: 770px) {
     #navbar{
         opacity: 1;
@@ -213,11 +361,81 @@ a{
         transform: translateY(-8px) rotate(-45deg);
     }
 
+    #about .about-content .about-left {
+        width: 600px;
+    }
+
 }
 
 @media only screen and (max-width: 700px) {
     #header .content2 #typed {
         font-size: 30px;
+    }
+
+    .line{
+        left: 41%;
+    }
+}
+
+@media only screen and (max-width: 650px) {
+    #about .about-content .about-left {
+        width: 550px;
+    }
+
+    #about #stats{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        grid-gap: 0rem;
+        width: 100px;
+        margin: auto
+    }
+}
+
+@media only screen and (max-width: 590px) {
+    #about .about-content .about-left {
+        width: 450px;
+    }
+
+    .line{
+        left: 40%;
+    }
+}
+
+@media only screen and (max-width: 500px){
+    #about .about-content .about-left {
+        width: 380px;
+    }
+
+    #about .about-content .about-left p{
+        text-align: justify;
+    }
+
+    .line{
+        left: 38%;
+    }
+}
+
+@media only screen and (max-width: 450px){
+    #about .about-content .about-left {
+        width: 300px;
+    }
+
+    #about .about-content .about-left p{
+        text-align: justify;
+    }
+}
+
+@media only screen and (max-width: 380px){
+    #about .about-content .about-left {
+        width: 270px;
+    }
+
+    #about .about-content .about-left p{
+        text-align: justify;
+    }
+
+    .line{
+        left: 36%;
     }
 }
 
@@ -235,17 +453,24 @@ a{
     }
 }
 
-@media only screen and (max-width: 360px) {
-    #header .content2 h1{
-        font-size: 16px;
+@media only screen and (max-width: 300px){
+    #about .about-content{
+        width: 230px;
     }
 
-    #header .content2 #typed {
-        font-size: 20px;
-    }
-
-    #header .content2 p {
+    #about .about-content p{
         font-size: 14px;
     }
-}
 
+    #about .about-content .about-left {
+        width: 230px;
+    }
+
+    #about .about-content .about-left p{
+        text-align: justify;
+    }
+
+    .line{
+        left: 35%;
+    }
+}
